fix avatar cropper

--- a/settings/css/settings.css
+++ b/settings/css/settings.css
@@ -26,7 +26,7 @@ input#openid, input#webdav { width:20em; }
 .jcrop-holder {
 	z-index: 500;
 }
-#avatarform #cropper {
+#cropper {
 	float: left;
 	z-index: 500;
 	/* float cropper above settings page to prevent unexpected flowing from dynamically sized element */
@@ -38,7 +38,7 @@ input#openid, input#webdav { width:20em; }
 	width: 100%;
 	height: calc(100% - 45px);
 }
-#avatar #cropper .inner-container {
+#cropper .inner-container {
 	z-index: 2001; /* above the top bar if needed */
 	position: absolute;
 	top: 50%;
@@ -51,13 +51,13 @@ input#openid, input#webdav { width:20em; }
 	padding: 15px;
 }
 
-#avatar #cropper .inner-container .jcrop-holder {
+#cropper .inner-container .jcrop-holder {
 	box-shadow: 0 0 7px #888;
 }
-#avatar #cropper .inner-container .button {
+#cropper .inner-container .button {
 	margin-top: 15px;
 }
-#avatar #cropper .inner-container .primary {
+#cropper .inner-container .primary {
 	float: right;
 }
 
